fix badgs flex-gap

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -203,7 +203,7 @@
     text-align: center;
     display: flex;
     flex-flow: row wrap;
-    gap: 2px 0;
+    gap: 1px 0;
 }
 
 .sub-title {
